tests/suite/snapshots/suite__check__tests__check__bad_return_1.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_return_1.xi:2:5]
   │
 2 │     return 1
   ·     ────┬───  
   ·         ╰───── Return mismatch
───╯

